Drobne poprawki i zmiana adresu email na testowy
